@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.foodonate {
    namespace log {
      namespace adapter {
        class com.example.foodonate.log.adapter.LogAdapter {
            - context : Context
            - deliveryDate : String
            - donateLogResponseList : List<DonateLogResponse>
            - isToggled : Boolean
            + LogAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace log {
      namespace adapter {
        class com.example.foodonate.log.adapter.LogAdapter.LogItemHolder {
            - tvDate : TextView
            - tvLocation : TextView
            - tvName : TextView
            - tvRequestedOn : TextView
            - tvStatus : TextView
            + LogItemHolder()
        }
      }
    }
  }
  

  com.example.foodonate.log.adapter.LogAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodonate.log.adapter.LogAdapter +-down- com.example.foodonate.log.adapter.LogAdapter.LogItemHolder
  com.example.foodonate.log.adapter.LogAdapter.LogItemHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
